PNG Export: convert to rgb, if the image isn't rgb or gray

BUG:398241